[package]
name = "grail_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
petgraph = { version = "0.6", default-features = false, features = ["serde-1"] }
# Math utilities for physics calculations
nalgebra = { version = "0.33", default-features = false, features = ["serde-serialize"] }